--- a/BBGTick/nbproject/private/private.properties
+++ b/BBGTick/nbproject/private/private.properties
@@ -2,8 +2,7 @@ application.args=-h
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.blpapi_java_3.4.8.1-bin=J:\\blpapi_java_3.7.1.1\\bin
+file.reference.blpapi_java_3.4.8.1-bin=F:\\blpapi_java_3.7.1.1\\bin\\blpapi-3.7.1-1.jar
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.5.1\\java2\\modules\\ext\\jaxws21\\api:C:\\Program Files\\NetBeans 6.5.1\\ide10\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Documents and Settings\\bbguser\\.netbeans\\6.5\\build.properties
+user.properties.file=F:\\PortableApps\\NetBeans_JavaSE_7.4_Portable\\Data\\NetBeans\\Config\\7.4\\build.properties
