--- a/BBGTick/nbproject/project.properties
+++ b/BBGTick/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=JavaApplication1
 application.vendor=bbguser
 auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
@@ -23,16 +27,100 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/BBGTick.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.blpapi_java_3.4.8.1-bin=../Desktop/blpapi_java_3.4.8.1/bin
+file.reference.blpapi-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/blpapi-3.7.1-1.jar
+file.reference.blpapi-examples-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/blpapi-examples-3.7.1-1.jar
+file.reference.ContributionsMktdataExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/ContributionsMktdataExample-3.7.1-1.jar
+file.reference.ContributionsPageExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/ContributionsPageExample-3.7.1-1.jar
+file.reference.CorrelationExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/CorrelationExample-3.7.1-1.jar
+file.reference.dropbox-core-sdk-1.7.6.jar=../../dropbox/dropbox-java-sdk-1.7.6/lib/dropbox-core-sdk-1.7.6.jar
+file.reference.EntitlementsVerificationExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/EntitlementsVerificationExample-3.7.1-1.jar
+file.reference.EntitlementsVerificationSubscriptionExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/EntitlementsVerificationSubscriptionExample-3.7.1-1.jar
+file.reference.GenerateTokenExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/GenerateTokenExample-3.7.1-1.jar
+file.reference.IntradayBarExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/IntradayBarExample-3.7.1-1.jar
+file.reference.IntradayTickExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/IntradayTickExample-3.7.1-1.jar
+file.reference.jackson-core-2.2.3.jar=../../dropbox/dropbox-java-sdk-1.7.6/lib/jackson-core-2.2.3.jar
+file.reference.LegacyAllOrNoneExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/LegacyAllOrNoneExample-3.7.1-1.jar
+file.reference.LegacyLogonStatusExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/LegacyLogonStatusExample-3.7.1-1.jar
+file.reference.LocalMktdataSubscriptionExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/LocalMktdataSubscriptionExample-3.7.1-1.jar
+file.reference.LocalPageSubscriptionExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/LocalPageSubscriptionExample-3.7.1-1.jar
+file.reference.MktdataBroadcastPublisherExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/MktdataBroadcastPublisherExample-3.7.1-1.jar
+file.reference.MktdataPublisherExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/MktdataPublisherExample-3.7.1-1.jar
+file.reference.NameEnumerationExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/NameEnumerationExample-3.7.1-1.jar
+file.reference.PageBroadcastPublisherExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/PageBroadcastPublisherExample-3.7.1-1.jar
+file.reference.PagePublisherExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/PagePublisherExample-3.7.1-1.jar
+file.reference.RefDataExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/RefDataExample-3.7.1-1.jar
+file.reference.RequestServiceExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/RequestServiceExample-3.7.1-1.jar
+file.reference.SecurityEntitlementsExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SecurityEntitlementsExample-3.7.1-1.jar
+file.reference.SecurityLookupExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SecurityLookupExample-3.7.1-1.jar
+file.reference.ServiceSchemaDump-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/ServiceSchemaDump-3.7.1-1.jar
+file.reference.SimpleBlockingRequestExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleBlockingRequestExample-3.7.1-1.jar
+file.reference.SimpleCategorizedFieldSearchExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleCategorizedFieldSearchExample-3.7.1-1.jar
+file.reference.SimpleFieldInfoExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleFieldInfoExample-3.7.1-1.jar
+file.reference.SimpleFieldListExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleFieldListExample-3.7.1-1.jar
+file.reference.SimpleFieldSearchExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleFieldSearchExample-3.7.1-1.jar
+file.reference.SimpleHistoryExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleHistoryExample-3.7.1-1.jar
+file.reference.SimpleIntradayBarExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleIntradayBarExample-3.7.1-1.jar
+file.reference.SimpleIntradayTickExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleIntradayTickExample-3.7.1-1.jar
+file.reference.SimpleRefDataExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleRefDataExample-3.7.1-1.jar
+file.reference.SimpleRefDataOverrideExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleRefDataOverrideExample-3.7.1-1.jar
+file.reference.SimpleSubscriptionExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleSubscriptionExample-3.7.1-1.jar
+file.reference.SimpleSubscriptionIntervalExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SimpleSubscriptionIntervalExample-3.7.1-1.jar
+file.reference.SubscriptionCorrelationExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SubscriptionCorrelationExample-3.7.1-1.jar
+file.reference.SubscriptionWithEventHandlerExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/SubscriptionWithEventHandlerExample-3.7.1-1.jar
+file.reference.UserEntitlementsExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/UserEntitlementsExample-3.7.1-1.jar
+file.reference.UserModeExample-3.7.1-1.jar=../../blpapi_java_3.7.1.1/bin/UserModeExample-3.7.1-1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.blpapi_java_3.4.8.1-bin}:\
-    ${libs.BBG.classpath}
+    ${file.reference.ContributionsMktdataExample-3.7.1-1.jar}:\
+    ${file.reference.ContributionsPageExample-3.7.1-1.jar}:\
+    ${file.reference.CorrelationExample-3.7.1-1.jar}:\
+    ${file.reference.EntitlementsVerificationExample-3.7.1-1.jar}:\
+    ${file.reference.EntitlementsVerificationSubscriptionExample-3.7.1-1.jar}:\
+    ${file.reference.GenerateTokenExample-3.7.1-1.jar}:\
+    ${file.reference.IntradayBarExample-3.7.1-1.jar}:\
+    ${file.reference.IntradayTickExample-3.7.1-1.jar}:\
+    ${file.reference.LegacyAllOrNoneExample-3.7.1-1.jar}:\
+    ${file.reference.LegacyLogonStatusExample-3.7.1-1.jar}:\
+    ${file.reference.LocalMktdataSubscriptionExample-3.7.1-1.jar}:\
+    ${file.reference.LocalPageSubscriptionExample-3.7.1-1.jar}:\
+    ${file.reference.MktdataBroadcastPublisherExample-3.7.1-1.jar}:\
+    ${file.reference.MktdataPublisherExample-3.7.1-1.jar}:\
+    ${file.reference.NameEnumerationExample-3.7.1-1.jar}:\
+    ${file.reference.PageBroadcastPublisherExample-3.7.1-1.jar}:\
+    ${file.reference.PagePublisherExample-3.7.1-1.jar}:\
+    ${file.reference.RefDataExample-3.7.1-1.jar}:\
+    ${file.reference.RequestServiceExample-3.7.1-1.jar}:\
+    ${file.reference.SecurityEntitlementsExample-3.7.1-1.jar}:\
+    ${file.reference.SecurityLookupExample-3.7.1-1.jar}:\
+    ${file.reference.ServiceSchemaDump-3.7.1-1.jar}:\
+    ${file.reference.SimpleBlockingRequestExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleCategorizedFieldSearchExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleFieldInfoExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleFieldListExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleFieldSearchExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleHistoryExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleIntradayBarExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleIntradayTickExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleRefDataExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleRefDataOverrideExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleSubscriptionExample-3.7.1-1.jar}:\
+    ${file.reference.SimpleSubscriptionIntervalExample-3.7.1-1.jar}:\
+    ${file.reference.SubscriptionCorrelationExample-3.7.1-1.jar}:\
+    ${file.reference.SubscriptionWithEventHandlerExample-3.7.1-1.jar}:\
+    ${file.reference.UserEntitlementsExample-3.7.1-1.jar}:\
+    ${file.reference.UserModeExample-3.7.1-1.jar}:\
+    ${file.reference.blpapi-3.7.1-1.jar}:\
+    ${file.reference.blpapi-examples-3.7.1-1.jar}:\
+    ${file.reference.dropbox-core-sdk-1.7.6.jar}:\
+    ${file.reference.jackson-core-2.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -60,6 +148,7 @@ jnlp.signed=false
 main.class=BBGTick.BBGRawTick
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
