--- a/BBGTick/nbproject/private/configs/debug.properties
+++ b/BBGTick/nbproject/private/configs/debug.properties
@@ -1,1 +1,1 @@
-application.args=-sd 2013-01-10T00:00:00 -ed 2014-02-16T00:00:00
+application.args=-sd 2014-01-01T00:00:00 -ed 2014-02-16T00:00:00 -b 1 -e TRADE
