--- a/BBGTick/nbproject/private/private.properties
+++ b/BBGTick/nbproject/private/private.properties
@@ -2,7 +2,6 @@ application.args=-h
 compile.on.save=false
 do.depend=false
 do.jar=true
-file.reference.blpapi_java_3.4.8.1-bin=F:\\blpapi_java_3.7.1.1\\bin\\blpapi-3.7.1-1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=F:\\PortableApps\\NetBeans_JavaSE_7.4_Portable\\Data\\NetBeans\\Config\\7.4\\build.properties
+user.properties.file=G:\\PortableApps\\NetBeans_JavaSE_7.4_Portable\\Data\\NetBeans\\Config\\7.4\\build.properties
